compiler/examples/cyclic_test.expected
Test error
Error lustre ordering translate:
cyclic_test.mls:1:1-8:1: there is a cyclic dependency:
x depends on y depends on b depends on x
